stilus.css átnevezve cv.css-re

--- a/HajosTeszt/HajosTeszt/wwwroot/cv.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/cv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Bemutatkozás</title>
-    <link rel="stylesheet" href="stilus.css" />
+    <link rel="stylesheet" href="cv.css" />
 </head>
 <body>
     <a href="./index.html" id="back">Vissza a főoldalra.</a>
