--- a/HajosTeszt/HajosTeszt/wwwroot/index.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/index.html
@@ -9,7 +9,7 @@
     <div>
         <a href="cv.html">CV</a>
         <a href="cv2.html">CV 2</a>
-        <a href="hajo.html">CV 2</a>
+        <a href="hajo.html">hajo.html</a>
     </div>
 </body>
 </html>
