--- a/HajosTeszt/HajosTeszt/wwwroot/index.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/index.html
@@ -10,6 +10,7 @@
         <a href="cv.html">CV</a>
         <a href="cv2.html">CV 2</a>
         <a href="hajo.html">hajo.html</a>
+        <a href="jsgyak.html">JS gyak</a>
     </div>
 </body>
 </html>
