--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -19,14 +19,16 @@
                 <div id="válasz3" class="kerdes kattintható">Válasz 3</div>
             </div>
             <div id="kép">
-                <img id="kép1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" />
+                <img id="kérdésKép" src="" />
             </div>
         </div>
         
         <div id="vezérlő">
-            <div class="gomb kattintható">Vissza</div>
-            <div class="gomb kattintható">Következő</div>
+            <div id="előző" class="gomb kattintható">Vissza</div>
+            <div id="következő" class="gomb kattintható">Következő</div>
         </div>
     </div>
+
+    <script src="hetedik.js"></script>
 </body>
 </html>
