--- a/HajosTeszt/HajosTeszt/wwwroot/kerdesek.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/kerdesek.html
@@ -14,6 +14,10 @@
 
             );
 
+        /*fetch("/questions/22")
+            .then(res => res.json())
+            .then(data => kiiratás(data))*/
+
         function kiiratás(lista) {
             console.log(lista)
             for (var i = 0; i < lista.length; i++) {
